[workspace]
members = [
    "common",
    "playground",
#    "get_started",
#    "pg_sql",
#    "write_excel",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
authors = ["me <me@gmail.com>"]
edition = "2021"
homepage = "https://github.com/"
repository = "https://github.com/"
license = "MIT"

[workspace.dependencies]
log = { version = "0.4.22", features = ["release_max_level_info"] }
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[workspace.lints.rust]
#unused_imports = "allow"

[profile.release]
lto = true
strip = true
codegen-units = 1
