[workspace]
members = [
    "common",
    "parse_xml",
    "get_started",
    "pg_sql",
    "playground",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
authors = ["me <me@gmail.com>"]
edition = "2021"
homepage = "https://github.com/"
repository = "https://github.com/"
license = "MIT"

[workspace.dependencies]
log = { version = "0.4.22", features = ["release_max_level_info"] }
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[workspace.lints.rust]
#unused_imports = "allow"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3
