[workspace]
members = [
    "setting",
    "playground",
    "logging",
    "schemas",
    "connection",
    "pg_model",
    "pg_sql",
    "parse_xml",
    "data_type",
    "write_excel",
    "process_file",
    "datetime",
    "use_rocksdb", "sys", "table", "lru_cache",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
authors = ["me <me@gmail.com>"]
edition = "2024"
homepage = "https://github.com/"
repository = "https://github.com/"
license = "MIT"

[workspace.dependencies]
log = { version = "0.4.27", features = ["release_max_level_info"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock", "serde"] }
chrono-tz = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"

[workspace.lints.rust]
#unused_imports = "allow"
dead_code = "allow"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3
