[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
file-logger = ["dep:flexi_logger"]
tracing = ["dep:tracing-appender", "dep:tracing-subscriber", "dep:tracing", "dep:tracing-rolling-file"]
web3 = ["dep:ethers"]
pulsar = ["dep:pulsar", "dep:schemars"]
preserve_order = ["serde_json/preserve_order", "schemars?/preserve_order"]
pg = ["dep:deadpool-postgres", "dep:tokio-postgres"]
pg-with-model = ["pg", "dep:postgres-from-row"]
pg-with-enum = [
    "pg-with-model",
    "dep:duplicate",
    "dep:strum",
    "dep:serde_with",
    "dep:num_enum",
    "dep:serde_repr",
]

[dependencies]
log = { workspace = true }
chrono = { workspace = true }
dotenvy = "0.15.7"
serde = { workspace = true }
serde_json = { workspace = true }

env_logger = { version = "0.11.3" , optional = true}
flexi_logger = { version = "0.28.0", optional = true }

tracing = { version = "0.1.40", optional = true }
# 使用 time 库
#time = { version = "0.3.31", features = ["formatting", "macros"] }
#tracing-subscriber = { version = "0.3.18", features = ["local-time"], optional = true }
# 使用 chrono 库
tracing-subscriber = { version = "0.3.18", features = ["chrono"], optional = true }
# 输出日志文件名中时间为当地时区
#tracing-appender = { package = "clia-tracing-appender", version = "0.2.5", optional = true }
# 输出日志文件名中时间为UTC
tracing-appender = {  version = "0.2.3", optional = true }
# 使tracing-appender支持按文件大小分割
tracing-rolling-file = { version = "0.1.2", optional = true  }
#time = { version = "0.3.31", features = ["formatting", "macros"] }

deadpool-postgres = { version = "0.13.0", optional = true }
tokio-postgres = { version = "0.7.10", optional = true, features = [
    "with-chrono-0_4",
    "with-serde_json-1",
] }

postgres-from-row = { version = "0.5.2", optional = true }
strum = { version = "0.26.2", features = ["derive"], optional = true }
serde_with = { version = "3.7.0", optional = true }
num_enum = { version = "0.7.2", optional = true }
serde_repr = { version = "0.1.19", optional = true }
duplicate = { version = "1.0.0", optional = true }

ethers = { version = "2.0.14", default-features = false, optional = true, features = [
    "abigen",
    "legacy",
    "openssl",
] }

pulsar = { version = "6.1.0", default-features = false, optional = true, features = [
    "tokio-runtime",
    "compression",
] }
schemars = { version = "0.8.16", optional = true }
