[package]
name = "connection"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies.eyre]
version = "0.6.12"

[dependencies.deadpool-postgres]
version = "0.14.1"

[dependencies.tokio-postgres]
version = "0.7.12"
features = [
    "with-chrono-0_4",
    "with-serde_json-1",
]

[lints]
workspace = true
