[package]
name = "connection"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies.anyhow]
version = "1.0.99"

[dependencies.deadpool-postgres]
version = "0.14.1"

[dependencies.tokio-postgres]
version = "0.7.13"
features = [
    "with-chrono-0_4",
    "with-serde_json-1",
]

[lints]
workspace = true
