[package]
name = "data_type"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
logging = { path = "../logging" }

bytes = "1.10.0"
byteorder = "1.5.0"
rand = "0.9.0"
fastrand = "2.3.0"
itertools = "0.14.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
bigdecimal = "0.4.7"
num-bigint = "0.4.6"
rust_decimal = "1.36.0"
indexmap = "2.7.1"
glob = "0.3.2"
camino = "1.1.9"
directories = "6.0.0"
