[package]
name = "data_type"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
logging = { path = "../logging" }

bytes = "1.11.0"
byteorder = "1.5.0"
rand = "0.9.2"
fastrand = "2.3.0"
itertools = "0.14.0"
ndarray = { version = "0.17.1", features = ["rayon"] }
bigdecimal = "0.4.9"
num-bigint = "0.4.6"
rust_decimal = "1.39.0"
indexmap = "2.12.1"
glob = "0.3.3"
camino = "1.2.1"
directories = "6.0.0"
