[package]
name = "study_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock", "serde"] }
chrono-tz = "0.9.0"
display_json = "0.2.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
yaml-rust2 = "0.8"
glob = "0.3.1"
anyhow = "1.0.86"
calamine = "0.25.0"
rust_xlsxwriter = { version = "0.71.0", features = ["zlib","ryu"] }
rand = "0.8.5"
log = {workspace = true}
fastrand = "2.1.0"
itertools = "0.13.0"
ndarray = { version = "0.15.6",features = ["rayon"] }
