[package]
name = "logging"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
chrono = { workspace = true }

env_logger = { version = "0.11.8", optional = true }
flexi_logger = { version = "0.30.1", optional = true }

tracing = { version = "0.1.41", optional = true }
# 使用 time 库
#time = { version = "0.3.31", features = ["formatting", "macros"] }
#tracing-subscriber = { version = "0.3.18", features = ["local-time"], optional = true }
# 使用 chrono 库
tracing-subscriber = { version = "0.3.19", features = ["chrono"], optional = true }
# 输出日志文件名中时间为当地时区
#tracing-appender = { package = "clia-tracing-appender", version = "0.2.5", optional = true }
# 输出日志文件名中时间为UTC
tracing-appender = { version = "0.2.3", optional = true }
# 使tracing-appender支持按文件大小分割
tracing-rolling-file = { version = "0.1.2", optional = true }

[features]
default = ["env_logger"]
file-logger = ["dep:flexi_logger"]
tracing = ["dep:tracing-appender", "dep:tracing-subscriber", "dep:tracing", "dep:tracing-rolling-file"]

[lints]
workspace = true
