[package]
name = "parse_xml"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "gzip"] }
tokio = { version = "1.43.0", features = ["full"] }
quick-xml = { version = "0.37.2" }
chrono = { workspace = true }
roxmltree = { version = "0.20.0" }
anyhow = { workspace = true }

[lints]
workspace = true
