[package]
name = "parse_xml"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.23", features = ["json", "gzip"] }
tokio = { version = "1.47.1", features = ["full"] }
quick-xml = { version = "0.38.3" }
chrono = { workspace = true }
roxmltree = { version = "0.21.0" }
anyhow = { workspace = true }

[lints]
workspace = true
