[package]
name = "model"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
postgres-from-row = { version = "0.5.2" }

strum = { version = "0.27.2", features = ["derive"], optional = true }
serde_with = { version = "3.15.0", optional = true }
num_enum = { version = "0.7.4", optional = true }
serde_repr = { version = "0.1.20", optional = true }
duplicate = { version = "2.0.0", optional = true }
postgres-types = { version = "0.2.11", features = ["derive"], optional = true }

[features]
enum = [
    "dep:duplicate",
    "dep:strum",
    "dep:serde_with",
    "dep:num_enum",
    "dep:serde_repr",
    "dep:postgres-types",
]

[lints]
workspace = true
