[package]
name = "pg_sql"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4", "with-serde_json-1"] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }

setting = { path = "../setting" }
connection = { path = "../connection" }
logging = { path = "../logging" }
model = { path = "../pg_model",features = ["enum"] }

[target.'cfg(unix)'.dependencies]

#[lints]
#workspace = true

[lints.rust]
