[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
common = { path = "../common", features = ["tracing"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }


[lints]
workspace = true
