[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
once_cell = "1.19.0"
tokio = { version = "1", features = ["full"] }
futures = "0"
anyhow = "1.0.89"

[lints]
workspace = true
