[package]
name = "playground"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
anyhow = "1.0.98"

setting = { path = "../setting" }

[lints]
workspace = true
