[package]
name = "setting"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
#config = { version = "0.15.6" ,default-features = false,features = ["convert-case","yaml"]}
dotenvy = "0.15.7"
envy = "0.4.2"
serde.workspace = true

[lints]
workspace = true
