[package]
name = "use_rocksdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.1.1"
rocksdb = "0.22.0"
serde_json = { workspace = true }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
