[package]
name = "use_rocksdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.3.0"
rocksdb = "0.23.0"
serde_json = { workspace = true }
uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
